2019-1/221/users/4105/executions/1818_2572.log
== TEST (2019-06-10 18:18:48) 
-- CODE:
from numpy import*
x=array(eval(input()))
z=zeros(x, dytpe=int)
n=0
m=1
for x in vet:
	if(z%2==0):
		n=n+1
	elif(z%2==1):
		m=m+1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:19:48) 
-- CODE:
from numpy import*
x=array(eval(input()))
z=zeros(x,dtype=int)
n=0
m=1
for x in vet:
	if(z%2==0):
		n=n+1
	elif(z%2==1):
		m=m+1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:20:24) 
-- CODE:
from numpy import*
x=array(eval(input()))
z=zeros(x,dtype=int)
n=0
m=1
for x in range(size(vet)):
	if(z%2==0):
		n=n+1
	elif(z%2==1):
		m=m+1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:22:45) 
-- CODE:
from numpy import*
x=array(eval(input()))
vet=zeros(x, dtype=int)
n=0
m=1
for x in vet:
	if(vet[i]%2==0):
		n=n+1
	elif(vet[i]%2==1):
		m=m+1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:23:53) 
-- CODE:
from numpy import*
v=array(eval(input()))
vet=zeros(x, dtype=int)
x=0
m=1
for v in vet:
	if(vet[i]%2==0):
		n=n+1
	elif(vet[i]%2==1):
		m=m+1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:25:57) 
-- CODE:
from numpy import*
v=array(eval(input()))
x=0
vet=zeros(x, dtype=int)
for v in vet:
	if(vet[i]%2==1):
		x=x+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:26:16) 
-- CODE:
from numpy import*
v=array(eval(input()))
x=0
vet=zeros(x, dtype=int)
for v in vet:
	if(vet[i]%2==0):
		x=x+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:27:45) 
-- CODE:
from numpy import*
v=array(eval(input()))
x=0
vet=zeros(x, dtype=int)
for i in vet:
	if(vet[i]%2==0):
		x=x+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:28:14) 
-- CODE:
from numpy import*
v=array(eval(input()))
x=0
vet=zeros(x, dtype=int)
for i in vet:
	if(vet[i]%2==1):
		x=x+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:29:22) 
-- CODE:
from numpy import*
v=array(eval(input()))
x=0
vet=zeros(x, dtype=int)
for i in vet:
	if(vet[i]%2==1):
		x=x+1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:29:37) 
-- CODE:
from numpy import*
v=array(eval(input()))
x=0
vet=zeros(x, dtype=int)
for i in vet:
	if(vet[i]%2==1):
		x=x+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:30:01) 
-- CODE:
from numpy import*
v=array(eval(input()))
x=0
vet=zeros(x, dtype=int)
for i in vet:
	if(vet[i]%2==0):
		x=x+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:31:23) 
-- CODE:
from numpy import*
v=array(eval(input()))
x=0
vet=zeros(x, dtype=int)
for i in vet:
	if(vet[i]%2==0):
		vet=vet+1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 18:31:55) 
-- CODE:
from numpy import*
v=array(eval(input()))
x=0
vet=zeros(x, dtype=int)
for v in vet:
	if(vet[i]%2==0):
		vet=vet+1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:15:00) 
-- CODE:
from numpy import *
x=0
cont = zeros(x, dtype=int)
vet = input()
for i in vet:
	if (vet%2 == 0):
		cont[i] = cont[i] + 1
	elif:
		cont[i] = cont[i] 
	
print(cont)
-- ERROR:
File "XXXX", line 8
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:15:18) 
-- CODE:
from numpy import *
x=0
cont = zeros(x, dtype=int)
vet = input()
for i in vet:
	if (vet%2 == 0):
		cont[i] = cont[i] + 1
	elif:
		cont[i] = cont[i] 
	
print(cont)
-- ERROR:
File "XXXX", line 8
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:15:56) 
-- CODE:
from numpy import *
x=0
cont = zeros(x, dtype=int)
vet = input()
for i in vet:
	if (vet%2 == 1):
		cont[x] = cont[x]
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:16:57) 
-- CODE:
from numpy import *
x=0
cont = zeros(x, dtype=int)
vet = input()
for i in vet:
	if(vet%2 == 1):
		cont[x] = cont[x]
		x=x+1
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:17:27) 
-- CODE:
from numpy import *
x=0
cont = zeros(x, dtype=int)
vet = array(eval(input()))
for i in vet:
	if(vet%2 == 1):
		cont[x] = cont[x]
		x=x+1
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:19:17) 
-- CODE:
from numpy import *
x=0
cont = zeros(x, dtype=int)
vet = array(eval(input()))
for i in range(vet):
	if(vet%2==1):
		cont[x] = cont[x]
		x=x+1
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:19:47) 
-- CODE:
from numpy import *
x=0
cont = zeros(x, dtype=int)
vet = array(eval(input()))
for i in range(vet):
	if(vet%2==1):
		cont[x] = vet[x]
		x=x+1
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:20:25) 
-- CODE:
from numpy import *
x=0
cont = zeros(x, dtype=int)
vet = array(eval(input()))
for i in range(size(vet)):
	if(vet%2==1):
		cont[x] = vet[x]
		x=x+1
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:21:43) 
-- CODE:
from numpy import *
x=0
cont = zeros(x, dtype=int)
vet = array(eval(input()))
for x in range(size(vet)):
	if(vet%2==1):
		cont[x] = vet[x]
		x=x+1
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:54:06) 
-- CODE:
from numpy import *
x=0
cont = zeros(x, dtype=int)
vet = array(eval(input()))
for x in range(size(vet)):
	if(vet%2==1):
		cont[x] = vet[x]
		x=x+1
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 08:54:14) 
-- CODE:
from numpy import *
x=0
cont = zeros(x, dtype=int)
vet = array(eval(input()))
for x in range(size(vet)):
	if(vet%2==1):
		cont[x] = vet[x]
		x=x+1
	
print(cont)
-- EXECUTION TIME:
0.974845
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1818/2572/main.py", line 6, in <module>
    if(vet%2==1):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 08:54:20) 
-- CODE:
from numpy import *
x=0
cont = zeros(x, dtype=int)
vet = array(eval(input()))
for x in range(size(vet)):
	if(vet%2==1):
		cont[x] = vet[x]
		x=x+1
	
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:26:35) 
-- CODE:
from numpy import*
vetor=array(eval(input()))
nimpar=0
for elemento in vetor:
	if elemento%2 != 0:
		nimpar=nimapr+1
		
vetorNovo=zeros(nimpar,dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:27:04) 
-- CODE:
from numpy import*
vetor=array(eval(input()))
nimpar=0
for elemento in vetor:
	if elemento%2 != 0:
		nimpar=nimpar+1
		
vetorNovo=zeros(nimpar,dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:27:14) 
-- CODE:
from numpy import*
vetor=array(eval(input()))
nimpar=0
for elemento in vetor:
	if elemento%2 != 0:
		nimpar=nimpar+1
		
vetorNovo=zeros(nimpar,dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 09:27:21) 
-- CODE:
from numpy import*
vetor=array(eval(input()))
nimpar=0
for elemento in vetor:
	if elemento%2 != 0:
		nimpar=nimpar+1
		
vetorNovo=zeros(nimpar,dtype=int)
-- EXECUTION TIME:
0.96415
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:

-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:

-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 09:27:46) 
-- CODE:
from numpy import*
vetor=array(eval(input()))
nimpar=0
for elemento in vetor:
	if elemento%2 != 0:
		nimpar=nimpar+1
		
VetorNovo=zeros(nimpar,dtype=int)
print(VetorNovo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:30:45) 
-- CODE:
from numpy import*
vetor=array(eval(input()))
nimpar=0
for elemento in vetor:
	if (elemento%2 != 0):
		nimpar=nimpar+1
		
VetorNovo=zeros(nimpar,dtype=int)
nimpar=0
for elemento in vetor:
	VetorNovo[impar]=elemento
	nimpar=nimpar+1
	
print(VetorNovo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:31:20) 
-- CODE:
from numpy import*
vetor=array(eval(input()))
nimpar=0
for elemento in vetor:
	if (elemento%2 != 0):
		nimpar=nimpar+1
		
VetorNovo=zeros(nimpar,dtype=int)
nimpar=0
for elemento in vetor:
	VetorNovo[nimpar]=elemento
	nimpar=nimpar+1
	
print(VetorNovo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:32:27) 
-- CODE:
from numpy import*
vetor=array(eval(input()))
nimpar=0
for elemento in vetor:
	if (elemento%2 != 0):
		nimpar=nimpar+1
		
VetorNovo=zeros(nimpar,dtype=int)
nimpar=0
for elemento in vetor:
	if(elemento%2 != 0):
		VetorNovo[nimpar]=elemento
		nimpar=nimpar+1
	
print(VetorNovo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:32:40) 
-- CODE:
from numpy import*
vetor=array(eval(input()))
nimpar=0
for elemento in vetor:
	if (elemento%2 != 0):
		nimpar=nimpar+1
		
VetorNovo=zeros(nimpar,dtype=int)
nimpar=0
for elemento in vetor:
	if(elemento%2 != 0):
		VetorNovo[nimpar]=elemento
		nimpar=nimpar+1
	
print(VetorNovo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:32:54) 
-- CODE:
from numpy import*
vetor=array(eval(input()))
nimpar=0
for elemento in vetor:
	if (elemento%2 != 0):
		nimpar=nimpar+1
		
VetorNovo=zeros(nimpar,dtype=int)
nimpar=0
for elemento in vetor:
	if(elemento%2 != 0):
		VetorNovo[nimpar]=elemento
		nimpar=nimpar+1
	
print(VetorNovo)
-- EXECUTION TIME:
1.22589
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
